--- a/app/src/main/res/layout/studenttiles.xml
+++ b/app/src/main/res/layout/studenttiles.xml
@@ -63,6 +63,7 @@
             android:layout_weight="1"
             android:drawableTop = "@drawable/atteone"
             android:text="ATTENDANCE"
+            android:id="@+id/attendance_btn"
             />
 
         <Button
