--- a/app/src/main/res/layout/studenttiles.xml
+++ b/app/src/main/res/layout/studenttiles.xml
@@ -24,17 +24,11 @@
         android:id="@+id/textstud"
         android:layout_gravity="center"
         />
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/imagestud"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/textstud"
-        android:src="@drawable/bookthird"
-        android:layout_marginTop="10dp"
-        android:layout_gravity="center"
-        android:layout_marginBottom="10dp"
+    <com.daimajia.slider.library.SliderLayout
+        android:id="@+id/slider"
+        android:layout_width="fill_parent"
+        android:layout_height="180dp"
+        android:layout_marginTop="50dp"
         />
 
     <TextView
@@ -71,7 +65,8 @@
             android:layout_height="200dp"
             android:layout_weight="1"
             android:drawableTop = "@drawable/hone"
-            android:text="HOMEWORK"/>
+            android:text="HOMEWORK"
+            android:id="@+id/homework_btn"/>
     </LinearLayout>
 
     <LinearLayout
@@ -85,14 +80,16 @@
             android:layout_height="200dp"
             android:layout_weight="1"
             android:drawableTop = "@drawable/rone"
-            android:text="REMARK"/>
+            android:text="REMARK"
+            android:id="@+id/remark_btn"/>
 
         <Button
             android:layout_width="0dip"
             android:layout_height="200dp"
             android:layout_weight="1"
             android:drawableTop = "@drawable/mone"
-            android:text="FEES"/>
+            android:text="FEES"
+            android:id="@+id/fees_btn"/>/>
     </LinearLayout>
 
     <LinearLayout
@@ -106,14 +103,16 @@
             android:layout_height="200dp"
             android:layout_weight="1"
             android:drawableTop = "@drawable/sone"
-            android:text="CIRCULAR"/>
+            android:text="CIRCULAR"
+            android:id="@+id/circular_btn"/>/>
 
         <Button
             android:layout_width="0dip"
             android:layout_height="200dp"
             android:layout_weight="1"
             android:drawableTop = "@drawable/eone"
-            android:text="@string/exams"/>
+            android:text="@string/exams"
+            android:id="@+id/exams_btn"/>/>
     </LinearLayout>
 
 </LinearLayout>
